--- a/style.css
+++ b/style.css
@@ -87,3 +87,49 @@ button{
 #curt-button:hover{
     background-color: rgb(170, 170, 255);
 }
+
+
+@media screen and (max-width: 1000px){
+    #product-gird {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
+
+
+.profile-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 60vh;
+}
+
+#profile{
+    background-color: tomato;
+    padding: 1rem 3rem;
+    flex-basis: 20rem;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+
+.profile-img{
+    border-radius: 50%;
+    box-shadow: 1px 1px 5px 0 #000;
+    width: 10rem;
+    margin: 2rem 0;
+    background-color: #ffffffff;
+}
+
+.products-link{
+    font-size: 2rem;
+    color: #000;
+    text-decoration: none;
+    transition: all .5s;
+}
+
+
+.products-link:hover{
+    transform: scale(1.2);
+}
